Fix navbar contrast issues

--- a/src/app/components/navbar/navbar.component.sass
+++ b/src/app/components/navbar/navbar.component.sass
@@ -24,6 +24,10 @@
 .navigation-link
     font-size: 100%
     flex-shrink: 0
+    color: unset
+
+.navigation-link:visited
+    color: unset
 
 .navigation-link.active
     background-color: var(--primary-darker)
